--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <main>
       <h1>SpeedEye</h1>
-      <p>This website is coming soon.</p>
+      <p>This website is coming soon. Stay tuned for more.</p>
     </main>
     <footer>
       <p>
